cli/src/tests/error/if.sibs
if $variable == "one" || $variable != "two" { } else { };
if $variable == "one" || && $variable != "two" { } else { };
if $variable == "one" ??? $variable != "two" { } else { };
if $variable == "one" $variable != "two" { env::is_os(); };
if && $variable == "one" { } else { };
if $variable == "one { } else { };
if $variable == "one" { env::is_os(); } if $variable == "one" || $variable != "two" { } else { };
if $variable == "one" { env::is_os(); } if $variable == "one" || && $variable != "two" { } else { };
if $variable == "one" { env::is_os(); } if $variable == "one" ??? $variable != "two" { } else { };
if $variable == "one" { env::is_os(); } if $variable == "one" $variable != "two" { env::is_os(); };
if $variable == "one" { env::is_os(); } if && $variable == "one" { } else { };
if $variable == "one" { env::is_os(); } if $variable == "one { } else { };
if $variable == "one" { env::is_os() };
if;
if else;